conf: set journal folder inside target folder; minor refactoring.

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -1,14 +1,14 @@
 akka {
   persistence {
     journal.plugin = "akka.persistence.journal.leveldb"
+    journal.leveldb.dir = "target/journal"
+
     journal.leveldb-shared.store {
       # DO NOT USE 'native = off' IN PRODUCTION !!!
       native = off
       dir = "target/shared-journal"
     }
-    journal.leveldb.store {
-          dir = "target/journal"
-    }
+
     snapshot-store.local.dir = "target/snapshots"
     snapshot-store.plugin = "akka.persistence.snapshot-store.local"
   }
